<resources>
    <string name="app_name">InstagramClone</string>
    <string name="description">Description</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="submit">SUBMIT</string>
    <string name="logged">Logged in as %s. Log out.</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="create_new_account">Create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_comment">Enter comment...</string>
</resources>