<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/green"
        android:text="@string/logged" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:backgroundTint="@color/blue"
         />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="0"
        tools:srcCompat="@tools:sample/avatars" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



</LinearLayout>