<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragments.ComposeFragment">


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:backgroundTint="@color/blue"
        />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="0"
        tools:srcCompat="@tools:sample/avatars" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>